--- a/db/config/config.json
+++ b/db/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "xiezy",
     "password": "123456",
-    "database": "spider",
+    "database": "easy_post",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
@@ -16,7 +16,7 @@
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "easy_post",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
