--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "spider-node",
 	"version": "1.0.0",
 	"private": true,
-	"description": "用于spider-ui项目的后端支撑",
+	"description": "用于easy-post项目的后端支撑",
 	"scripts": {
 		"start": "nodemon --inspect bin/www",
 		"dev": "nodemon bin/www",
@@ -16,6 +16,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"debug": "^4.1.1",
+		"jsonwebtoken": "^8.5.1",
 		"koa": "^2.7.0",
 		"koa-bodyparser": "^4.2.1",
 		"koa-convert": "^1.2.0",
@@ -26,10 +27,13 @@
 		"koa-static": "^5.0.0"
 	},
 	"devDependencies": {
+		"captchapng": "0.0.1",
 		"inquirer": "^8.1.0",
 		"mysql2": "^2.2.5",
+		"node-rsa": "^1.1.1",
 		"nodemon": "^1.19.1",
 		"sequelize": "^6.6.2",
-		"sequelize-cli": "^6.2.0"
+		"sequelize-cli": "^6.2.0",
+		"svg-captcha": "^1.4.0"
 	}
 }
