--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"author": "xiezy",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^0.21.1",
 		"debug": "^4.1.1",
 		"jsonwebtoken": "^8.5.1",
 		"koa": "^2.7.0",
