--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"koa-logger": "^3.2.0",
 		"koa-multer": "^1.0.2",
 		"koa-router": "^7.4.0",
-		"koa-static": "^5.0.0"
+		"koa-static": "^5.0.0",
+		"log4js": "^6.3.0"
 	},
 	"devDependencies": {
 		"captchapng": "0.0.1",
