--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"babel-eslint": "^10.1.0",
 		"captchapng": "0.0.1",
 		"inquirer": "^8.1.0",
+		"koa-compose": "^4.1.0",
 		"mysql2": "^2.2.5",
 		"node-rsa": "^1.1.1",
 		"nodemon": "^1.19.1",
